--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+/* Normalize */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;}
 :root{
     --header-color:#212121;
     --text-color:#757575;
@@ -8,26 +13,36 @@
     --background-origin:#F5F4FA;
     --background-basic: #E5E5E5;
 }
+
 body{ 
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.03em;
     background-color:var(--wite-color);
     color: var(--text-color);
-    font-size: 14px;
-     
+    font-size: 14px; 
     
     }
-ul{
-    list-style: none;
+ul{ 
+    margin: 0;
+    padding: 0;
+    list-style: none;    
+}
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+.header{
+    border-bottom: 1px solid #ECECEC;
 }
 
-
 .logo{
-font-family: Raleway;
+ font-family: Raleway;
 font-size: 26px;
 font-weight: 700;
 line-height: 1.19;
-text-align: left;
+text-align: left; 
 color: var(--accent-color);
 text-decoration: none;
  
@@ -37,6 +52,7 @@ text-decoration: none;
     color:var(--black-color); 
 }
 .site-link{
+    display: block;
     font-size: 14px;
     font-weight: 500;
     line-height: 1.14;
@@ -44,6 +60,8 @@ text-decoration: none;
     text-align: left;
     color: var(--header-color);
     text-decoration: none;
+    padding-top: 21px;
+    padding-bottom: 21px;
 }
 .contacts-link{
     color: var(--text-color); 
@@ -56,29 +74,64 @@ text-decoration: none;
 .current,.site-link:hover,.site-link:focus,.contacts-link:hover,.contacts-link:focus,.contacts-footer:hover,.contacts-footer:focus {
     color:var(--accent-color);
 }
-.hero{
-background: var(--background-dark);
 
-border-radius: 0px;
+.logo-header{
+    display: flex;
+    margin-right: 93px;
 }
+.header-nav{
+    display: flex; 
+    align-items: center;  
+}
+.site-nav-link{
+    display: flex;
+    justify-content: center;  
+}  
+.site-nav-link .link+.link{
+    margin-left: 50px;
+}
+.header-contacts{
+    display: flex; 
+}
+.header-contacts .link+.link{
+    margin-left: 50px;
+}
+.header-inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+}  
+.hero{    
+    padding-top: 200px; 
+    padding-bottom: 200px;
+    background: var(--background-dark);
+border-radius: 0px;
+text-align: center;
+}
+
 .title-hero{ 
-font-weight: 900;
+    display: inline-block;
+    margin-top: 0;
+    margin-bottom:40px;
+    padding-left: 250px;
+    padding-right: 250px;
+    font-weight: 900;
 font-size: 44px;
 line-height: 1.36;
 text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
 color: var(--wite-color);
+/* max-width: 700px; */
 }
 .button{
 font-size: 16px;
 line-height: 1.88;
-text-align: center;
 letter-spacing: 0.06em;
 background-color: var(--accent-color) ;
 color: var(--wite-color);
 border: none;
-width: 200px;
+min-width: 200px;
 height: 50px;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
@@ -89,6 +142,8 @@ cursor: pointer;
 }
 .benefits, .work{
     background:var(--wite-color);
+    padding-top: 94px ;
+    margin: 0 auto;
 }
 .visually-hidden {
     position: absolute;
@@ -103,28 +158,55 @@ cursor: pointer;
     clip: rect(0 0 0 0);
     overflow: hidden;
   }
+  .benefits-list{
+    display: flex;
+  }
+ .benefits-li:not(:last-child) {
+    margin-right: 30px;
+ }
 
+.benefits-li{
+max-width: 270px;
+}
 .benefits-title  {
- font-size: 14px;
+ margin-top: 0;
+ margin-bottom: 10px;
+font-size: 14px;
 line-height: 1.14;
 text-transform: uppercase;
 color: var(--header-color); 
 }
 .benefits-text {
 line-height: 1.71;
+margin: 0;
 
 }
 .work-title, .team-title{
-font-size: 36px;
+margin-top: 0;
+margin-bottom: 50px;
+    font-size: 36px;
 line-height: 1.17;
 text-align: center;
 color:var(--header-color);
 }
-.team{
-    background: var(--wite-color);
+.work-list{
+    display: flex;
 }
-
+ .work-li+.work-li{
+    margin-left: 30px;
+} 
+.team{
+    background: var(--background-origin);
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+.team-photo{
+    margin-top: 0;
+    margin-bottom: 10px;
+}
 .team-employee{
+    margin-top: 0;
+    margin-bottom: 10px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
@@ -132,20 +214,41 @@ color:var(--header-color);
     color: var(--header-color);
 }
 .team-position{
+margin: 0;
 font-size: 16px;
 line-height: 1.19;
 text-align: center;
+}
+.team-list{
+    padding-left: 0;
+    display: flex;
+}
+.team-li{
 
+    background: var(--wite-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
+ padding-bottom: 30px; 
+/* padding-left: 0; */
 
 }
+.team-li:not(:last-child) {
+    margin-right: 30px;
+ }
+ 
 .footer{
+   padding-top: 60px;
+  
     background: var(--background-dark);
     text-decoration: none;
 }
 .logo-parttwo-footer{
 color: var(--wite-color);
 }
-.adress-footer{
+.logo-footer{
+    margin-bottom: 20px;  
+}
+.adress-footer{   
     font-size: 14px;
     line-height: 1.17;
     text-decoration: none;
@@ -153,6 +256,14 @@ color: var(--wite-color);
     font-family: 'Roboto';
 font-style: normal;
 letter-spacing: 0.03em;
+margin-bottom: 10px;
+}
+.address-list{
+  padding-bottom: 60px;
+  padding-left: 0;
+}
+.address-link{
+    margin-bottom: 10px;
 }
 .contacts-footer{
   font-size: 14px;
@@ -166,11 +277,21 @@ font-style: normal;
 /* portfolio */
 .portfolio-project{
     background-color:var(--wite-color);
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
-
+.portfolio-project-button-list{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+.portfolio-project-button-li+.portfolio-project-button-li{
+    margin-left: 8px;
+}
 .portfolio-project-button{
+   margin-bottom: 46px;
     padding: 6px 22px;
-    font-family: inherit;
+     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
@@ -188,8 +309,28 @@ font-style: normal;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px; 
 }
-
+.portfolio-project-list{
+    display: flex;
+    flex-wrap: wrap;
+}
+.portfolio-project-li{
+    border: 1px solid #EEEEEE;
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    background: var(--wite-color);
+}
+.portfolio-project-li:nth-child(3n){
+    margin-right: 0;
+}
+.portfolio-project-li:nth-last-child(-n+3){
+    margin-bottom: 0;
+}
 .portfolio-project-client {
+    margin-top: 20px;
+    margin-left: 24px;
+    margin-bottom: 4px;
+
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -197,9 +338,11 @@ font-style: normal;
     color:var(--header-color)
 }
 .portfolio-project-order{
+margin-top: 0;
+margin-bottom: 20px;
+margin-left: 24px;
 font-size: 16px;
 line-height: 1.88;
-
 }
 .portfolio-project-button.active{
     color: var(--wite-color);
