--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,13 @@
 /* Normalize */
+
+html {
+	box-sizing: border-box;
+}
 *,
-*::before,
-*::after {
-    box-sizing: border-box;}
+*::after,
+*::before {
+	box-sizing: inherit;
+}
 :root{
     --header-color:#212121;
     --text-color:#757575;
@@ -14,6 +19,40 @@
     --background-basic: #E5E5E5;
 }
 
+/* Стили для обнуления верхних отступов у элементов */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+	margin-top: 0;
+}
+/* Класс для обнуления базовых свойств у списков (ul) */
+ul{ 
+    margin: 0;
+    padding-left: 0;
+    list-style: none;    
+}
+/* Класс для обнуления базовых свойств у ссылок */
+.link {
+	text-decoration: none;
+	color: inherit;
+}
+/* Свойства для корректного отображения картинок */
+img {
+	display: block;
+	max-width: 100%;
+	height: auto;
+}
+/* Свойства для обнуления курсива у address */
+
+address {
+	font-style: normal;
+}
+
+
 body{ 
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.03em;
@@ -22,11 +61,11 @@ body{
     font-size: 14px; 
     
     }
-ul{ 
-    margin: 0;
-    padding: 0;
-    list-style: none;    
-}
+    .section{
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
+
 .container {
     width: 100%;
     max-width: 1200px;
@@ -60,8 +99,8 @@ text-decoration: none;
     text-align: left;
     color: var(--header-color);
     text-decoration: none;
-    padding-top: 21px;
-    padding-bottom: 21px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 .contacts-link{
     color: var(--text-color); 
@@ -69,7 +108,9 @@ text-decoration: none;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 0.02em; 
+    letter-spacing: 0.02em;
+    padding-top: 32px;
+    padding-bottom: 32px; 
 }
 .current,.site-link:hover,.site-link:focus,.contacts-link:hover,.contacts-link:focus,.contacts-footer:hover,.contacts-footer:focus {
     color:var(--accent-color);
@@ -110,11 +151,12 @@ text-align: center;
 }
 
 .title-hero{ 
-    display: inline-block;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 0;
-    margin-bottom:40px;
-    padding-left: 250px;
-    padding-right: 250px;
+    margin-bottom:30px;
+    width: 696px;
     font-weight: 900;
 font-size: 44px;
 line-height: 1.36;
@@ -140,11 +182,7 @@ cursor: pointer;
 .button:hover,.button:focus {
     background-color: #188CE8;
 }
-.benefits, .work{
-    background:var(--wite-color);
-    padding-top: 94px ;
-    margin: 0 auto;
-}
+ 
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -181,6 +219,9 @@ line-height: 1.71;
 margin: 0;
 
 }
+.work{ 
+    padding-top: 0;   
+} 
 .work-title, .team-title{
 margin-top: 0;
 margin-bottom: 50px;
@@ -197,12 +238,11 @@ color:var(--header-color);
 } 
 .team{
     background: var(--background-origin);
-    padding-top: 94px;
-    padding-bottom: 94px;
+   
 }
 .team-photo{
     margin-top: 0;
-    margin-bottom: 10px;
+   
 }
 .team-employee{
     margin-top: 0;
@@ -219,17 +259,18 @@ font-size: 16px;
 line-height: 1.19;
 text-align: center;
 }
+.card-team{
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
 .team-list{
     padding-left: 0;
     display: flex;
 }
 .team-li{
-
     background: var(--wite-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 0px 0px 4px 4px;
- padding-bottom: 30px; 
-/* padding-left: 0; */
 
 }
 .team-li:not(:last-child) {
@@ -238,7 +279,7 @@ border-radius: 0px 0px 4px 4px;
  
 .footer{
    padding-top: 60px;
-  
+  padding-bottom: 60px;
     background: var(--background-dark);
     text-decoration: none;
 }
@@ -259,10 +300,10 @@ letter-spacing: 0.03em;
 margin-bottom: 10px;
 }
 .address-list{
-  padding-bottom: 60px;
+ 
   padding-left: 0;
 }
-.address-link{
+.address-link:not(:last-child){
     margin-bottom: 10px;
 }
 .contacts-footer{
@@ -275,21 +316,22 @@ font-family: 'Roboto';
 font-style: normal;
 }
 /* portfolio */
-.portfolio-project{
+/* .portfolio-project{
     background-color:var(--wite-color);
     padding-top: 94px;
     padding-bottom: 94px;
-}
+} */
 .portfolio-project-button-list{
     display: flex;
     justify-content: center;
     align-items: center; 
+    margin-bottom: 50px;
 }
 .portfolio-project-button-li+.portfolio-project-button-li{
     margin-left: 8px;
 }
 .portfolio-project-button{
-   margin-bottom: 46px;
+ 
     padding: 6px 22px;
      font-family: inherit;
     font-weight: 500;
@@ -326,9 +368,12 @@ font-style: normal;
 .portfolio-project-li:nth-last-child(-n+3){
     margin-bottom: 0;
 }
+.portfolio-project-card{
+  
+    padding: 20px 24px;
+}
 .portfolio-project-client {
-    margin-top: 20px;
-    margin-left: 24px;
+    
     margin-bottom: 4px;
 
     font-weight: 700;
@@ -338,9 +383,8 @@ font-style: normal;
     color:var(--header-color)
 }
 .portfolio-project-order{
-margin-top: 0;
-margin-bottom: 20px;
-margin-left: 24px;
+margin-bottom: 0;
+
 font-size: 16px;
 line-height: 1.88;
 }
