--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,23 @@
 /* Normalize */
 
 html {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 *,
 *::after,
 *::before {
-	box-sizing: inherit;
+  box-sizing: inherit;
 }
-:root{
-    --header-color:#212121;
-    --text-color:#757575;
-    --accent-color:#2196F3;
-    --wite-color: #FFFFFF;
-    --black-color: #000000;
-    --background-dark:#2F303A;
-    --background-origin:#F5F4FA;
-    --background-basic: #E5E5E5;
+:root {
+  --header-color: #212121;
+  --text-color: #757575;
+  --accent-color: #2196f3;
+  --wite-color: #ffffff;
+  --black-color: #000000;
+  --icon-color: #afb1b8;
+  --background-dark: #2f303a;
+  --background-origin: #f5f4fa;
+  --background-basic: #e5e5e5;
 }
 
 /* Стили для обнуления верхних отступов у элементов */
@@ -27,368 +28,477 @@ h4,
 h5,
 h6,
 p {
-	margin-top: 0;
+  margin-top: 0;
 }
 /* Класс для обнуления базовых свойств у списков (ul) */
-ul{ 
-    margin: 0;
-    padding-left: 0;
-    list-style: none;    
+ul {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
 }
 /* Класс для обнуления базовых свойств у ссылок */
 .link {
-	text-decoration: none;
-	color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 /* Свойства для корректного отображения картинок */
 img {
-	display: block;
-	max-width: 100%;
-	height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 /* Свойства для обнуления курсива у address */
 
 address {
-	font-style: normal;
+  font-style: normal;
 }
 
-
-body{ 
-    font-family: 'Roboto', sans-serif;
-    letter-spacing: 0.03em;
-    background-color:var(--wite-color);
-    color: var(--text-color);
-    font-size: 14px; 
-    
-    }
-    .section{
-        padding-top: 94px;
-        padding-bottom: 94px;
-    }
+body {
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 0.03em;
+  background-color: var(--wite-color);
+  color: var(--text-color);
+  font-size: 14px;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
 .container {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
-.header{
-    border-bottom: 1px solid #ECECEC;
-}
-
-.logo{
- font-family: Raleway;
-font-size: 26px;
-font-weight: 700;
-line-height: 1.19;
-text-align: left; 
-color: var(--accent-color);
-text-decoration: none;
- 
-}
-.logo-parttwo{
-    
-    color:var(--black-color); 
-}
-.site-link{
-    display: block;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    text-align: left;
-    color: var(--header-color);
-    text-decoration: none;
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
-.contacts-link{
-    color: var(--text-color); 
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    padding-top: 32px;
-    padding-bottom: 32px; 
-}
-.current,.site-link:hover,.site-link:focus,.contacts-link:hover,.contacts-link:focus,.contacts-footer:hover,.contacts-footer:focus {
-    color:var(--accent-color);
+.header {
+  border-bottom: 1px solid #ececec;
 }
 
-.logo-header{
-    display: flex;
-    margin-right: 93px;
+.logo {
+  font-family: Raleway;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.19;
+  text-align: left;
+  color: var(--accent-color);
+  text-decoration: none;
 }
-.header-nav{
-    display: flex; 
-    align-items: center;  
+.logo-parttwo {
+  color: var(--black-color);
 }
-.site-nav-link{
-    display: flex;
-    justify-content: center;  
-}  
-.site-nav-link .link+.link{
-    margin-left: 50px;
+.site-link {
+  display: block;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-align: left;
+  color: var(--header-color);
+  text-decoration: none;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
-.header-contacts{
-    display: flex; 
+.contacts-link {
+  color: var(--text-color);
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  display: flex;
 }
-.header-contacts .link+.link{
-    margin-left: 50px;
+.current,
+.site-link:hover,
+.site-link:focus,
+.contacts-link:hover,
+.contacts-link:focus,
+.contacts-footer:hover,
+.contacts-footer:focus {
+  color: var(--accent-color);
 }
-.header-inner{
-    display: flex;
-    justify-content: space-between;
-    align-items: center; 
-}  
-.hero{    
-    padding-top: 200px; 
-    padding-bottom: 200px;
-    background: var(--background-dark);
-border-radius: 0px;
-text-align: center;
+.contacts-link-icon {
+  fill: currentColor;
+  margin-right: 10px;
+}
+.logo-header {
+  display: flex;
+  margin-right: 93px;
+}
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+.site-nav-link {
+  display: flex;
+  justify-content: center;
+}
+.site-nav-link .link + .link {
+  margin-left: 50px;
+}
+.header-contacts {
+  display: flex;
+}
+.contacts-link-icon {
+}
+.header-contacts .link + .link {
+  margin-left: 50px;
+}
+.header-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.hero {
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  background: var(--background-dark);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/bakcground/bakcground-hero.jpg);
+  border-radius: 0px;
+  text-align: center;
 }
 
-.title-hero{ 
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0;
-    margin-bottom:30px;
-    width: 696px;
-    font-weight: 900;
-font-size: 44px;
-line-height: 1.36;
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-color: var(--wite-color);
-/* max-width: 700px; */
+.title-hero {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 30px;
+  width: 696px;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--wite-color);
+  /* max-width: 700px; */
 }
-.button{
-font-size: 16px;
-line-height: 1.88;
-letter-spacing: 0.06em;
-background-color: var(--accent-color) ;
-color: var(--wite-color);
-border: none;
-min-width: 200px;
-height: 50px;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
-cursor: pointer;
+.button {
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  background-color: var(--accent-color);
+  color: var(--wite-color);
+  border: none;
+  min-width: 200px;
+  height: 50px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
 }
-.button:hover,.button:focus {
-    background-color: #188CE8;
+.button:hover,
+.button:focus {
+  background-color: #188ce8;
 }
- 
+
 .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-  }
-  .benefits-list{
-    display: flex;
-  }
- .benefits-li:not(:last-child) {
-    margin-right: 30px;
- }
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
 
-.benefits-li{
-max-width: 270px;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
-.benefits-title  {
- margin-top: 0;
- margin-bottom: 10px;
-font-size: 14px;
-line-height: 1.14;
-text-transform: uppercase;
-color: var(--header-color); 
+.benefits-list {
+  display: flex;
+}
+.benefits-li:not(:last-child) {
+  margin-right: 30px;
+}
+
+.benefits-li {
+  max-width: 270px;
+}
+.benefits-icon {
+  width: 270px;
+  height: 120px;
+  text-align: center;
+  padding: 25px 102px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
+.benefits-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--header-color);
 }
 .benefits-text {
-line-height: 1.71;
-margin: 0;
+  line-height: 1.71;
+  margin: 0;
+}
+.work {
+  padding-top: 0;
+}
+.work-title,
+.team-title,
+.client-title {
+  margin-top: 0;
+  margin-bottom: 50px;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  color: var(--header-color);
+}
+.work-list {
+  display: flex;
+}
+.work-li + .work-li {
+  margin-left: 30px;
+}
+.team {
+  background: var(--background-origin);
+}
+.team-photo {
+  margin-top: 0;
+}
+.team-employee {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  color: var(--header-color);
+}
+.team-position {
+  margin-bottom: 16px;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+}
+.card-team {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.team-list {
+  padding-left: 0;
+  display: flex;
+}
+.team-li {
+  background: var(--wite-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.sosial-list-icon {
+  display: flex;
 
+  margin-left: 32px;
 }
-.work{ 
-    padding-top: 0;   
-} 
-.work-title, .team-title{
-margin-top: 0;
-margin-bottom: 50px;
-    font-size: 36px;
-line-height: 1.17;
-text-align: center;
-color:var(--header-color);
-}
-.work-list{
-    display: flex;
-}
- .work-li+.work-li{
-    margin-left: 30px;
-} 
-.team{
-    background: var(--background-origin);
-   
-}
-.team-photo{
-    margin-top: 0;
-   
-}
-.team-employee{
-    margin-top: 0;
-    margin-bottom: 10px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
-    color: var(--header-color);
-}
-.team-position{
-margin: 0;
-font-size: 16px;
-line-height: 1.19;
-text-align: center;
-}
-.card-team{
-    padding-top: 30px;
-    padding-bottom: 30px;
-}
-.team-list{
-    padding-left: 0;
-    display: flex;
-}
-.team-li{
-    background: var(--wite-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
+.sosial-li-icon {
+  width: 44px;
+  height: 44px;
 
+  padding: 12px;
+}
+.sosial-li-icon:not(:last-child) {
+  margin-right: 10px;
+}
+.sosial-icon {
+  fill: var(--icon-color);
+}
+.sosial-li-icon:hover {
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  cursor: pointer;
+}
+.sosial-li-icon:hover .sosial-icon {
+  fill: var(--wite-color);
 }
 .team-li:not(:last-child) {
-    margin-right: 30px;
- }
+  margin-right: 30px;
+}
+.client-icon {
+  fill: var(--icon-color);
+}
+.client-list {
+  display: flex;
+}
+.client-li {
+  width: 170px;
+  height: 92px;
+  padding: 16px 32px;
+  border: 1px solid var(--icon-color);
+  border-radius: 4px;
+}
+.client-li:not(:last-child) {
+  margin-right: 30px;
+}
+.client-li:hover {
+  border: 1px solid var(--accent-color);
+  cursor: pointer;
+}
+.client-li:hover .client-icon {
+  fill: var(--accent-color);
+}
+.footer {
  
-.footer{
-   padding-top: 60px;
+    padding-top: 60px;
   padding-bottom: 60px;
-    background: var(--background-dark);
-    text-decoration: none;
+  background: var(--background-dark);
+  text-decoration: none;
 }
-.logo-parttwo-footer{
-color: var(--wite-color);
+.logo-parttwo-footer {
+  color: var(--wite-color);
 }
-.logo-footer{
-    margin-bottom: 20px;  
+.logo-footer {
+  margin-bottom: 20px;
 }
-.adress-footer{   
-    font-size: 14px;
-    line-height: 1.17;
-    text-decoration: none;
-    color:var(--wite-color); 
-    font-family: 'Roboto';
-font-style: normal;
-letter-spacing: 0.03em;
-margin-bottom: 10px;
+.adress-footer {
+  font-size: 14px;
+  line-height: 1.17;
+  text-decoration: none;
+  color: var(--wite-color);
+  font-family: 'Roboto';
+  font-style: normal;
+  letter-spacing: 0.03em;
+  margin-bottom: 10px;
 }
-.address-list{
- 
+.address-list {
   padding-left: 0;
 }
-.address-link:not(:last-child){
-    margin-bottom: 10px;
+.address-link:not(:last-child) {
+  margin-bottom: 10px;
 }
-.contacts-footer{
+.contacts-footer {
   font-size: 14px;
   line-height: 1.17;
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
+  letter-spacing: 0.03em;
+  font-family: 'Roboto';
+  font-style: normal;
+}
+.footer-list{
+display: flex;
+}
+
+.footer-sosial-title{
+  
+    margin-bottom: 20px;
+font-size: 14px;
+line-height: 16px;
 letter-spacing: 0.03em;
-font-family: 'Roboto';
-font-style: normal;
+text-transform: uppercase;
+color:var(--wite-color);
 }
-/* portfolio */
-/* .portfolio-project{
-    background-color:var(--wite-color);
-    padding-top: 94px;
-    padding-bottom: 94px;
-} */
-.portfolio-project-button-list{
+.footer-sosial{
+    margin-top: 12px;
+    margin-left: 70px;
+}
+.sosial-list-icon-footer{
     display: flex;
-    justify-content: center;
-    align-items: center; 
-    margin-bottom: 50px;
 }
-.portfolio-project-button-li+.portfolio-project-button-li{
-    margin-left: 8px;
+.sosial-li-icon-footer{
+    width: 44px;
+    height: 44px;
+  
+    padding: 12px;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.1);
 }
-.portfolio-project-button{
+.sosial-li-icon-footer:not(:last-child) {
+    margin-right: 10px;
+  }
+  .sosial-icon-footer{
+    fill: var(--wite-color);
+  }
  
-    padding: 6px 22px;
-     font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.63;
-    text-align: center;
-    color: var(--header-color);
-    background:var(--background-origin);
-    border-radius: 4px;
-    border:none;
+  .sosial-li-icon-footer:hover {
+    background-color: var(--accent-color);
+    border-radius: 50%;
     cursor: pointer;
+  }
+  .sosial-li-icon-footer:hover .sosial-icon {
+    fill: var(--wite-color);
+  } 
+  
+/* Portfolio */
+
+.portfolio-project-button-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.portfolio-project-button-li + .portfolio-project-button-li {
+  margin-left: 8px;
+}
+.portfolio-project-button {
+  padding: 6px 22px;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  color: var(--header-color);
+  background: var(--background-origin);
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
 }
 .portfolio-project-button:hover,
-.portfolio-project-button:focus{
-     color: var(--wite-color);
-    background:var(--accent-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px; 
+.portfolio-project-button:focus {
+  color: var(--wite-color);
+  background: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
-.portfolio-project-list{
-    display: flex;
-    flex-wrap: wrap;
+.portfolio-project-list {
+  display: flex;
+  flex-wrap: wrap;
 }
-.portfolio-project-li{
-    border: 1px solid #EEEEEE;
-    width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    background: var(--wite-color);
+.portfolio-project-li {
+  border: 1px solid #eeeeee;
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  background: var(--wite-color);
 }
-.portfolio-project-li:nth-child(3n){
-    margin-right: 0;
+.portfolio-project-li:nth-child(3n) {
+  margin-right: 0;
 }
-.portfolio-project-li:nth-last-child(-n+3){
-    margin-bottom: 0;
+.portfolio-project-li:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
-.portfolio-project-card{
-  
-    padding: 20px 24px;
+.portfolio-project-card {
+  padding: 20px 24px;
 }
 .portfolio-project-client {
-    
-    margin-bottom: 4px;
+  margin-bottom: 4px;
 
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    color:var(--header-color)
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--header-color);
 }
-.portfolio-project-order{
-margin-bottom: 0;
+.portfolio-project-order {
+  margin-bottom: 0;
 
-font-size: 16px;
-line-height: 1.88;
+  font-size: 16px;
+  line-height: 1.88;
 }
-.portfolio-project-button.active{
-    color: var(--wite-color);
-    background:var(--accent-color);   
+.portfolio-project-button.active {
+  color: var(--wite-color);
+  background: var(--accent-color);
 }
+
