--- a/css/styles.css
+++ b/css/styles.css
@@ -360,11 +360,11 @@ justify-content: center;
 .client-li:not(:last-child) {
   margin-right: 30px;
 }
-.client-icon:hover{
+.client-icon:hover,.client-icon:focus{
   border: 1px solid var(--accent-color);
 
 }
-.client-icon:hover, .client-li:focus .client-icon{
+.client-icon:hover, .client-icon:focus, .client-li:focus .client-icon{
   fill: var(--accent-color);
 }
 .footer {
@@ -407,6 +407,7 @@ justify-content: center;
 }
 .footer-list{
 display: flex;
+align-items: baseline;
 }
 
 .footer-sosial-title{
@@ -490,11 +491,18 @@ color:var(--wite-color);
   flex-wrap: wrap;
 }
 .portfolio-project-li {
-  border: 1px solid #eeeeee;
-  width: 370px;
+  
   margin-right: 30px;
   margin-bottom: 30px;
+  
+}
+.portfolio-project{
+  display: block;
+  text-decoration: none;
+  border: 1px solid #eeeeee;
+  width: 370px;
   background: var(--wite-color);
+  
 }
 .portfolio-project-li:nth-child(3n) {
   margin-right: 0;
@@ -502,7 +510,7 @@ color:var(--wite-color);
 .portfolio-project-li:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-.portfolio-project-li:hover{
+.portfolio-project:hover{
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 
 }
@@ -520,7 +528,7 @@ color:var(--wite-color);
 }
 .portfolio-project-order{
   margin-bottom: 0;
-
+color: var(--text-color);
   font-size: 16px;
   line-height: 1.88;
 }
