--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,8 @@ html {
   --background-dark: #2f303a;
   --background-origin: #f5f4fa;
   --background-basic: #e5e5e5;
+  --time-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --time: 250ms;
 }
 
 /* Стили для обнуления верхних отступов у элементов */
@@ -98,6 +100,7 @@ body {
   text-decoration: none;
   padding-top: 32px;
   padding-bottom: 32px;
+   transition: color var(--time) var(--time-function); 
 }
 .contacts-link {
   color: var(--text-color);
@@ -109,18 +112,36 @@ body {
   padding-top: 32px;
   padding-bottom: 32px;
   display: flex;
+  transition: color var(--time) var(--time-function);
 }
 .current,
 .site-link:hover,
 .site-link:focus,
-/* .site-link:active, */
+
 .contacts-link:hover,
 .contacts-link:focus,
-/* .contacts-link:active, */
+
 .contacts-footer:hover,
-/* .contacts-footer:active, */
+
 .contacts-footer:focus {
   color: var(--accent-color);
+}
+.current{
+  position: relative;
+
+
+}
+.current::after{
+  position: absolute;
+  display: block;
+  content: "";
+  width: 100%;
+height: 4px;
+bottom: 0;
+
+background-color: var(--accent-color);
+border-radius: 2px;
+
 }
 .contacts-link-icon {
   fill: currentColor;
@@ -146,8 +167,7 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
-.contacts-link-icon {
-}
+
 .header-contacts .link + .link {
   margin-left: 50px;
 }
@@ -185,7 +205,7 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--wite-color);
-  /* max-width: 700px; */
+
 }
 .button {
   font-size: 16px;
@@ -199,12 +219,58 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
+  transition: background-color var(--time) var(--time-function);
 }
 .button:hover,
-.button:focus {
+.button:focus,
+.button:active{
   background-color: #188ce8;
 }
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity var(--time) var(--time-function);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
 
+}
+.modal{
+  position: absolute;
+
+  top: 50%;
+  left: 50%;
+  
+  min-width: 528px;
+min-height: 581px;
+padding: 15px;
+background-color: var(--wite-color);
+transform: translate(-50%, -50%) scale(1);
+transition: transform var(--time) var(--time-function);
+}
+.backdrop.is-hidden .modal{
+  transform: translate(-50%, -50%) scale(1.1);
+}
+.modal-button{
+ 
+  position: absolute; 
+  top: 8px;
+  right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+height: 30px;
+border: 1px solid rgba(0, 0, 0, 0.1);
+border-radius: 50%;
+background-color: var(--wite-color);
+}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -250,6 +316,9 @@ justify-content: center;
   line-height: 1.71;
   margin: 0;
 }
+
+/* our work */
+
 .work {
   padding-top: 0;
 }
@@ -265,9 +334,34 @@ justify-content: center;
 }
 .work-list {
   display: flex;
+  
+}
+.work-li{
+position: relative;
+  padding-bottom: 0px;
 }
 .work-li + .work-li {
   margin-left: 30px;
+}
+.work-text{
+  display: block;
+   position: absolute;
+   width: 100%;
+   padding: 27px 82px;
+   background-color:rgba(47, 48, 58, 0.8);
+
+   margin: 0;
+   bottom: 0;
+  
+   font-weight: 700;
+   font-size: 14px;
+   line-height: 1.14;
+   letter-spacing: 0.03em;
+   text-transform: uppercase;
+
+   
+  color:var(--wite-color);
+  
 }
 .team {
   background: var(--background-origin);
@@ -316,8 +410,9 @@ justify-content: center;
   justify-content: center;
   width: 44px;
   height: 44px;
-
-
+  transition: background-color var(--time) var(--time-function),
+              border-radius var(--time) var(--time-function);
+  
 } 
 .sosial-li-icon:not(:last-child) {
   margin-right: 10px;
@@ -328,6 +423,7 @@ justify-content: center;
 }  */
 .sosial-icon {
   fill: var(--icon-color);
+  transition: fill var(--time) var(--time-function);
 }
 .sosial-link-icon:hover{
   background-color: var(--accent-color);
@@ -350,22 +446,22 @@ justify-content: center;
   /* padding: 16px 32px; */
   border: 1px solid var(--icon-color);
   border-radius: 4px;
+  transition: border var(--time) var(--time-function),
+  fill var(--time) var(--time-function);
 }
 .client-list {
   display: flex;
 }
-.client-li {
- 
-}
+
 .client-li:not(:last-child) {
   margin-right: 30px;
+  transition: border var(--time) var(--time-function),
+  fill var(--time) var(--time-function);
 }
-.client-icon:hover,.client-icon:focus{
-  border: 1px solid var(--accent-color);
 
-}
 .client-icon:hover, .client-icon:focus, .client-li:focus .client-icon{
   fill: var(--accent-color);
+  border: 1px solid var(--accent-color);
 }
 .footer {
  
@@ -404,6 +500,7 @@ justify-content: center;
   letter-spacing: 0.03em;
   font-family: 'Roboto';
   font-style: normal;
+  transition: color var(--time) var(--time-function);
 }
 .footer-list{
 display: flex;
@@ -433,9 +530,11 @@ color:var(--wite-color);
   width: 44px;
     height: 44px;
   
-    /* padding: 12px; */
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
+    transition: border-radius var(--time) var(--time-function),
+    background-color var(--time) var(--time-function),
+    fill var(--time) var(--time-function);
 }
 
 .sosial-li-icon-footer:not(:last-child) {
@@ -450,7 +549,7 @@ color:var(--wite-color);
     border-radius: 50%;
     
   }
-  .sosial-link-icon-footer:hover .sosial-icon, .sosial-li-icon-footer:focus .sosial-icon, .sosial-li-icon-footer:active .sosial-icon {
+  .sosial-link-icon-footer:hover .sosial-icon, .sosial-li-icon-footer:focus .sosial-icon {
     fill: var(--wite-color);
   } 
   
@@ -477,11 +576,15 @@ color:var(--wite-color);
   border-radius: 4px;
   border: none;
   cursor: pointer;
+  transition: color var(--time) var(--time-function),
+    background-color var(--time) var(--time-function),
+    box-shadow var(--time) var(--time-function);
+
 }
 .portfolio-project-button:hover,
 .portfolio-project-button:focus { 
   color: var(--wite-color);
-  background: var(--accent-color);
+  background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
@@ -502,17 +605,53 @@ color:var(--wite-color);
   border: 1px solid #eeeeee;
   width: 370px;
   background: var(--wite-color);
+  transition: box-shadow var(--time) var(--time-function);
   
+ }
+ .product-thumb{
+  position: relative;
+  overflow: hidden;
 }
+
+.portfolio-project-text{
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 24px;
+   font-family: 'Roboto';
+font-style: normal;
+font-weight: 400; 
+font-size: 18px;
+line-height: 1.56;
+width: 100%;
+height: 100%;
+
+letter-spacing: 0.03em;
+
+color: var(--wite-color);
+background-color: rgba(33, 150, 243, 0.9);
+ opacity: 0;  
+
+transform: translateY(100%);
+transition: opacity var(--time) var(--time-function),
+transform var(--time) var(--time-function) ;
+
+} 
 .portfolio-project-li:nth-child(3n) {
   margin-right: 0;
 }
 .portfolio-project-li:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-.portfolio-project:hover{
+.portfolio-project:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-
+ 
+}
+.portfolio-project:hover .portfolio-project-text {
+  transform: translateY(0);
+  opacity: 1;
 }
 .portfolio-project-card {
   padding: 20px 24px;
