--- a/css/styles.css
+++ b/css/styles.css
@@ -234,7 +234,9 @@ border-radius: 2px;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transition: opacity var(--time) var(--time-function);
+  visibility: visible;
+  transition: opacity var(--time) var(--time-function),
+  visibility var(--time) var(--time-function);
 }
 .backdrop.is-hidden {
   opacity: 0;
