--- a/css/styles.css
+++ b/css/styles.css
@@ -432,12 +432,12 @@ justify-content: center;
   fill: var(--icon-color);
   transition: fill var(--time) var(--time-function);
 }
-.sosial-link-icon:hover{
+.sosial-link-icon:hover, .sosial-link-icon:focus {
   background-color: var(--accent-color);
   border-radius: 50%;
 
 }
-.sosial-link-icon:hover .sosial-icon{
+.sosial-link-icon:hover .sosial-icon, .sosial-link-icon:focus .sosial-icon{
   fill: var(--wite-color);
 }
 .team-li:not(:last-child) {
@@ -652,7 +652,7 @@ transform var(--time) var(--time-function) ;
 .portfolio-project-li:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-.portfolio-project:hover {
+.portfolio-project:hover, .portfolio-project:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
  
 }
