--- a/css/styles.css
+++ b/css/styles.css
@@ -252,7 +252,7 @@ border-radius: 2px;
   
   min-width: 528px;
 min-height: 581px;
-padding: 15px;
+padding: 30px;
 background-color: var(--wite-color);
 transform: translate(-50%, -50%) scale(1);
 transition: transform var(--time) var(--time-function);
@@ -274,7 +274,179 @@ border: 1px solid rgba(0, 0, 0, 0.1);
 border-radius: 50%;
 background-color: var(--wite-color);
 cursor: pointer;
+transition: fill var(--time) var(--time-function);
 }
+.modal-button:hover, .modal-button:focus{
+fill: var(--accent-color);
+}
+.form-modal{
+  display: flex;
+flex-direction: column;
+align-items: center;
+width: 448px;
+padding: 0;
+margin: 0;
+
+}
+.form-group-field{
+width: 100%;
+
+ margin-bottom: 20px; 
+
+}
+.form-label{
+  display: block;
+  font-size: 12px;
+  line-height: 1.17;
+
+
+letter-spacing: 0.01em;
+
+color: var(--text-color);
+padding: 0;
+margin-bottom: 4px;
+
+}
+.form-title{
+  font-weight: 700;
+
+  font-size: 20px;
+line-height: 1.15;
+text-align: center;
+letter-spacing: 0.03em;
+
+color:var(--header-color);
+margin-bottom: 12px;
+}
+
+.form-thumb{
+  position: relative;
+  width: 100%;
+  margin-bottom: 10px;
+}
+.form-modal-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+}
+
+.form-input {
+  margin: 0;
+  padding: 1px 2px 1px 42px;
+  
+border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+width: 448px;
+height: 40px;
+transition: border var(--time) var(--time-function),
+border-radius var(--time) var(--time-function),
+fill var(--time) var(--time-function);
+}
+
+.form-input:hover,.form-input:focus {
+  outline: none;
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
+}
+
+.form-input:focus ~ .form-modal-icon{
+  fill: var(--accent-color);
+}
+
+.form-field textarea{
+  border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+
+}
+.form-ta-coment{
+  display: block;
+  width: 100%;
+  resize: none;
+  height: 120px;
+  padding: 12px 16px;
+  margin: 0;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+transition: border var(--time) var(--time-function),
+border-radius var(--time) var(--time-function);
+}
+.form-ta-coment:hover,.form-ta-coment:focus{
+  outline: none;
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
+}
+.form-field label{
+  margin-bottom: 4px;
+}
+.form-ta-coment textarea::placeholder {
+ 
+font-size: 12px;
+line-height: 1.16;
+letter-spacing: 0.01em;
+
+color: rgba(117, 117, 117, 0.5);
+
+}
+.form-policity{
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding-left: 24px;
+  margin-bottom: 30px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+}
+
+.icon-checkbox{
+  position: absolute;
+  display: inline-block;
+  left: 0;
+  width: 16px;
+  height: 16px;
+  background-image: url('../images/Vector.svg');
+  background-size: contain;
+  background-origin: border-box;
+
+}
+.form-checkbox:checked + .icon-checkbox{
+  border-color: transparent;
+  background-image: url('../images/icon-check.svg');
+  background-size: contain;
+  background-origin: border-box;
+}
+.policiti-link{
+  margin-left: 5px;
+  line-height: 1.71;
+
+letter-spacing: 0.03em;
+text-decoration: none;
+text-decoration-line: underline;
+
+color:var(--accent-color);
+
+}
+.form-field-button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.modal-form-button{
+  
+  width: 200px;
+  height: 50px;
+  
+  color: var(--wite-color);
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+padding: 10px 55px;
+cursor: pointer;
+/* text-align: center; */
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -425,9 +597,7 @@ justify-content: center;
   margin-right: 10px;
 }  
 
-/* .sosial-li-icon +.sosial-li-icon {
-  margin-left: 10px;
-}  */
+
 .sosial-icon {
   fill: var(--icon-color);
   transition: fill var(--time) var(--time-function);
@@ -450,7 +620,7 @@ justify-content: center;
   fill: var(--icon-color);
   width: 170px;
   height: 92px;
-  /* padding: 16px 32px; */
+
   border: 1px solid var(--icon-color);
   border-radius: 4px;
   transition: border var(--time) var(--time-function),
@@ -512,6 +682,7 @@ justify-content: center;
 .footer-list{
 display: flex;
 align-items: baseline;
+justify-content: space-between;
 }
 
 .footer-sosial-title{
@@ -559,6 +730,59 @@ color:var(--wite-color);
   .sosial-link-icon-footer:hover .sosial-icon, .sosial-li-icon-footer:focus .sosial-icon {
     fill: var(--wite-color);
   } 
+
+  
+  .form-list{
+     display: flex; 
+  
+}
+  .form-email{
+    width: 358px;
+height: 50px;
+padding-left: 16px;
+background-color: var(--background-dark);
+border: 1px solid rgba(255, 255, 255, 0.3);
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+border-radius: 4px;
+color: var(--wite-color);
+line-height: 1.88;
+font-size: 16px;
+letter-spacing: 0.03em;
+  }
+ .form-email input::placeholder {
+margin-left: 16px; 
+line-height: 1.25;
+
+letter-spacing: 0.03em;
+
+color: rgba(255, 255, 255, 0.6);
+  }
+  .form-button{
+    
+  font-size: 16px;
+  line-height: 1.88;
+  margin-left: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center; 
+  letter-spacing: 0.06em;
+  border: none;
+  color: var(--wite-color);
+  background-color: var(--accent-color);
+  padding: 10px 29px;
+  
+  min-width: 200px;
+  height: 50px;
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+text-align: center;
+}
+.form-icon{
+  fill: var(--wite-color);
+  margin-left: 10px;
+}
   
 /* Portfolio */
 
