--- a/scss/layout/_address.scss
+++ b/scss/layout/_address.scss
@@ -10,8 +10,17 @@
 
   padding-left: 0;
 
-&__link:not(:last-child) {
+&__li:not(:last-child) {
   margin-bottom: 10px;
+}
+.address__link{
+  font-size: 14px;
+  line-height: 1.17;
+  color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
+  letter-spacing: 0.03em;
+  font-family: 'Roboto';
+  font-style: normal;
 }
 &__contacts {
   font-size: 14px;
