--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 
 @import'./utils/variables';
 @import'./utils/hidden';
+@import'./utils/breakpoints';
 
 @import'./base/reset';
 @import'./base/common';
