--- a/css/main.css
+++ b/css/main.css
@@ -63,10 +63,25 @@ address {
 }
 
 .container {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 body {
@@ -134,8 +149,8 @@ body {
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
   visibility: visible;
-  -webkit-transition: opacity .backdrop time cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity .backdrop time cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -148,11 +163,15 @@ body {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+@media screen and (max-width: 1199px) {
+  .section {
+    padding-bottom: 60px;
+    padding-top: 60px;
+  }
+}
 
 .header {
   border-bottom: 1px solid #ececec;
-}
-.header__inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -162,23 +181,6 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-.header__link {
-  display: block;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  text-align: left;
-  color: var(--header-color);
-  text-decoration: none;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header__link:hover, .header__link:focus {
-  color: #2196f3;
 }
 .header__contacts-link {
   color: #757575;
@@ -241,18 +243,23 @@ body {
 }
 
 .hero {
-  max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  text-align: center;
   background: #2f303a;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/bakcground/bakcground-hero.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bakcground/bakcground-hero.jpg);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/bakcground/bakcground-hero-480x1.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/bakcground/bakcground-hero-480x1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  text-align: center;
+}
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .hero .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/bakcground/bakcground-hero-480x2.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/bakcground/bakcground-hero-480x2.jpg");
+  }
 }
 .hero__title {
   display: block;
@@ -260,7 +267,6 @@ body {
   margin-right: auto;
   margin-top: 0;
   margin-bottom: 30px;
-  width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -268,6 +274,12 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
+}
+@media screen and (max-width: 1199px) {
+  .hero__title {
+    font-size: 26px;
+    line-height: 1.61;
+  }
 }
 .hero__button {
   font-size: 16px;
@@ -287,6 +299,33 @@ body {
 }
 .hero__button:hover, .hero__button:focus, .hero__button:active {
   background-color: #188ce8;
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/bakcground/bakcground-hero-768x1.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/bakcground/bakcground-hero-768x1.jpg");
+  }
+}
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/bakcground/bakcground-hero-768x2.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/bakcground/bakcground-hero-768x2.jpg");
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    max-width: 1600px;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/bakcground/bakcground-hero.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/bakcground/bakcground-hero.jpg");
+  }
+}
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .hero .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/bakcground/bakcground-hero-1600x2.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/bakcground/bakcground-hero-1600x2.jpg");
+  }
 }
 
 .modal {
@@ -334,15 +373,34 @@ body {
   fill: #2196f3;
 }
 
-.benefits {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 768px) {
+  .benefits {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
 }
-.benefits__li {
-  max-width: 270px;
+@media screen and (min-width: 768px) {
+  .benefits__li {
+    width: calc((100% - 60px) / 2);
+    margin: 15px;
+  }
 }
-.benefits__li:not(:last-child) {
+@media screen and (min-width: 1200px) {
+  .benefits__li {
+    width: calc((100% - 120px) / 4);
+    margin: 15px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .benefits__li:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+.benefits:not(:last-child) {
   margin-right: 30px;
 }
 .benefits__icon {
@@ -409,19 +467,65 @@ body {
   text-transform: uppercase;
   color: #ffffff;
 }
+@media screen and (max-width: 1199px) {
+  .work {
+    display: none;
+  }
+}
 
 .team {
   background: #f5f4fa;
 }
+.team__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: -15px;
+}
+@media screen and (max-width: 1199px) {
+  .team__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+.team__li {
+  margin: 15px;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+@media screen and (min-width: 480px) {
+  .team__li {
+    width: 450px;
+    margin: 15px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__li {
+    width: calc((100% - 60px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__li {
+    width: calc((100% - 90px) / 4);
+  }
+}
+.team__li__li:not(:last-child) {
+  margin-right: 30px;
+}
 .team__title {
   margin-top: 0;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
 }
 .team__photo {
-  margin-top: 0;
+  width: 100%;
 }
 .team__employee {
-  margin-top: 0;
+  margin-top: 30px;
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
@@ -436,23 +540,20 @@ body {
   text-align: center;
 }
 .team__card {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-.team__list {
-  padding-left: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-.team__li {
-  background: #ffffff;
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-.team__li:not(:last-child) {
-  margin-right: 30px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .sosial {
@@ -494,10 +595,6 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client__title {
-  margin-top: 0;
-  margin-bottom: 50px;
-}
 .client__icon {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -515,20 +612,39 @@ body {
   border-radius: 4px;
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.client__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-.client__li:not(:last-child) {
-  margin-right: 30px;
-  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client__icon:hover, .client__icon:focus, .client__li:focus .client__icon {
   fill: #2196f3;
   border: 1px solid #2196f3;
+}
+.client__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: -15px;
+}
+@media screen and (max-width: 1199px) {
+  .client__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+.client__li {
+  margin: 15px;
+}
+@media screen and (min-width: 767px) {
+  .client__li {
+    width: calc((100% - 60px) / 2);
+  }
+}
+@media screen and (min-width: 768px) {
+  .client__li {
+    width: calc((100% - 90px) / 3);
+  }
 }
 
 .footer {
@@ -881,7 +997,65 @@ body {
 }
 
 /* Portfolio */
-.portfolio-project__button-list {
+@media screen and (min-width: 768px) {
+  .portfolio-project__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: -15px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 480px) {
+  .portfolio-project__list {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 767px) {
+  .portfolio-project__list:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 768px) {
+  .portfolio-project__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 15px;
+    width: calc((100% - 60px) / 2);
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .portfolio-project__list {
+    width: calc((100% - 90px) / 3);
+  }
+}
+@media screen and (min-width: 480px) {
+  .portfolio-project__list__li {
+    width: 450px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .portfolio-project__list__li:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .portfolio-project__list__li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 15px;
+    width: calc((100% - 60px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-project__list__li {
+    width: calc((100% - 90px) / 3);
+  }
+}
+.portfolio-project__list__button-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -893,10 +1067,10 @@ body {
           align-items: center;
   margin-bottom: 50px;
 }
-.portfolio-project__button-li + .portfolio-project__button-li {
+.portfolio-project__list__button-li + .portfolio-project__list__button-li {
   margin-left: 8px;
 }
-.portfolio-project__button {
+.portfolio-project__list__button {
   padding: 6px 22px;
   font-family: inherit;
   font-weight: 500;
@@ -913,33 +1087,16 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-project__button:hover, .portfolio-project__button:focus {
+.portfolio-project__list__button:hover, .portfolio-project__list__button:focus {
   color: #ffffff;
   background-color: #2196f3;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
-.portfolio-project__button.active {
+.portfolio-project__list__button.active {
   color: #ffffff;
   background: #2196f3;
-}
-.portfolio-project__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-.portfolio-project__li {
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-.portfolio-project__li:nth-child(3n) {
-  margin-right: 0;
-}
-.portfolio-project__li:nth-last-child(-n+3) {
-  margin-bottom: 0;
 }
 
 .portfolio-card {
