--- a/scss/layout/_benefits-section.scss
+++ b/scss/layout/_benefits-section.scss
@@ -1,13 +1,34 @@
 .benefits {
+@media screen and (min-width: 768px) {
     display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
  
+
   
   
   &__li {
-    max-width: 270px;
+    @media screen and (min-width: 768px) {
+        width: calc((100% - 4 * 15px) / 2);
+        margin: 15px;
+      }
+    
+      @media screen and (min-width: 1200px) {
+        width: calc((100% - 8 * 15px) / 4);
+        margin: 15px;
+      }
+    
+      &:not(:last-child) {
+        @media screen and (max-width: 767px) {
+          margin-bottom: 30px;
+        }
+      }
+ 
+    }
   
-  }
-  &__li:not(:last-child) {
+  
+  &:not(:last-child) {
     margin-right: 30px;
   }
   &__icon {
@@ -31,4 +52,4 @@
     line-height: 1.71;
     margin: 0;
   }
-}
+ }
