--- a/scss/layout/_hero-section.scss
+++ b/scss/layout/_hero-section.scss
@@ -1,25 +1,35 @@
 .hero {
-    max-width: 1600px;
+    //  max-width: 1600px;
       margin-left: auto;
     margin-right: auto;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+      text-align: center;
+
     background: $background-dark;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/bakcground/bakcground-hero.jpg);
+      url('../../images/bakcground/bakcground-hero-480x1.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
-    text-align: center;
- 
   
+  
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+    .hero {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../../images/bakcground/bakcground-hero-480x2.jpg');
+    }
+  }
+
   &__title {
     display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0;
     margin-bottom: 30px;
-    width: 696px;
+    // width: 696px;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -27,7 +37,10 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: $wite-color;
-  
+  @media screen and (max-width: 1199px) {
+      font-size: 26px;
+      line-height: 1.61;
+    }
   }
  &__button {
     font-size: 16px;
@@ -48,6 +61,38 @@
   &__button:active{
     background-color: #188ce8;
   }
- 
+ @media screen and (min-width: 768px) {
+   
+     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+       url('../../images/bakcground/bakcground-hero-768x1.jpg');
+   }
+
+   @media screen and (min-device-pixel-ratio: 2),
+   screen and (min-resolution: 192dpi),
+   screen and (min-resolution: 2dppx) {
+     
+       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+         url('../../images/bakcground/bakcground-hero-768x2.jpg');
+     }
+   
+
+
+ @media screen and (min-width: 1200px) {
+   
+     padding-top: 200px;
+     padding-bottom: 200px;
+     max-width: 1600px;
+     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+       url('../../images/bakcground/bakcground-hero.jpg');
+   }
+
+   @media screen and (min-device-pixel-ratio: 2),
+   screen and (min-resolution: 192dpi),
+   screen and (min-resolution: 2dppx) {
+     .hero {
+       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+         url('../../images/bakcground/bakcground-hero-1600x2.jpg');
+     }
+   }
+ }
   
-}
