--- a/scss/layout/_benefits-section.scss
+++ b/scss/layout/_benefits-section.scss
@@ -47,6 +47,7 @@
     line-height: 1.14;
     text-transform: uppercase;
     color: $header-color;
+        text-align: center;
   }
   &__text {
     line-height: 1.71;
