--- a/scss/layout/_portfolio-card.scss
+++ b/scss/layout/_portfolio-card.scss
@@ -2,7 +2,7 @@
     display: block;
     text-decoration: none;
     border: 1px solid #eeeeee;
-    width: 370px;
+    // width: 370px;
     background: $wite-color;
     transition: box-shadow $time $time-function;
     
