--- a/css/main.css
+++ b/css/main.css
@@ -92,23 +92,26 @@ body {
   font-size: 14px;
 }
 
-.current {
-  position: relative;
+@media screen and (max-width: 767px) {
+  .current {
+    color: #2196f3;
+  }
 }
-
-.current::after {
-  position: absolute;
-  display: block;
-  content: "";
-  width: 100%;
-  height: 4px;
-  bottom: 0;
-  background-color: #2196f3;
-  border-radius: 2px;
-}
-
-.current {
-  color: #2196f3;
+@media screen and (min-width: 768px) {
+  .current {
+    position: relative;
+    color: #2196f3;
+  }
+  .current::after {
+    position: absolute;
+    display: block;
+    content: "";
+    width: 100%;
+    height: 4px;
+    bottom: 0;
+    background-color: #2196f3;
+    border-radius: 2px;
+  }
 }
 
 .logo {
@@ -170,78 +173,109 @@ body {
   }
 }
 
-.header {
-  border-bottom: 1px solid #ececec;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+@media screen and (max-width: 767px) {
+  .menu-container {
+    background-color: #ffffff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 796px;
+    padding: 48px 40px;
+  }
+  .menu-toggle-close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    border: none;
+    background-color: #ffffff;
+    cursor: pointer;
+    -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu-toggle-close:hover, .menu-toggle-close:focus {
+    fill: #2196f3;
+  }
 }
-.header__contacts-link {
-  color: #757575;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (max-width: 767px) and (min-width: 768px) {
+  .menu-toggle-close:hover, .menu-toggle-close:focus {
+    display: none;
+  }
 }
-.header__contacts-link:hover, .header__contacts-link:focus {
-  color: #2196f3;
+@media screen and (max-width: 767px) {
+  .header__link {
+    font-size: 40px;
+    line-height: 47px;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #212121;
+    text-decoration: none;
+  }
 }
-.header__contacts-link-icon {
-  fill: currentColor;
-  margin-right: 10px;
+@media screen and (max-width: 767px) {
+  .header__nav-link {
+    margin-bottom: 287px;
+  }
 }
-.header__logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-right: 93px;
+@media screen and (max-width: 767px) {
+  .link + .link {
+    margin-top: 32px;
+  }
 }
-.header__nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+@media screen and (max-width: 767px) {
+  .header__tel {
+    font-size: 34px;
+    line-height: 1.18;
+    /* identical to box height */
+    letter-spacing: 0.02em;
+    color: #2196F3;
+    text-decoration: none;
+  }
 }
-.header__nav-link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+@media screen and (max-width: 767px) {
+  .header__mail {
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: #757575;
+    text-decoration: none;
+  }
 }
-.header__nav-link .link + .link {
-  margin-left: 50px;
+@media screen and (max-width: 767px) {
+  .header__social-link {
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: #2196F3;
+    text-decoration: none;
+  }
 }
-.header__contacts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+@media screen and (max-width: 767px) {
+  .header__social-item + .header__social-item {
+    margin-left: 10px;
+  }
+  .header__social-item + .header__social-item .header__social-link::before {
+    content: "";
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+    width: 22px;
+    margin-right: 10px;
+  }
 }
-.header__contacts .link + .link {
-  margin-left: 50px;
+@media screen and (max-width: 767px) {
+  .header__social-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 64px;
+  }
 }
-
+@media screen and (max-width: 767px) and (max-width: 767px) {
+  .header__contacts-link-icon {
+    display: none;
+  }
+}
 .hero {
   margin-left: auto;
   margin-right: auto;
@@ -425,6 +459,7 @@ body {
   line-height: 1.14;
   text-transform: uppercase;
   color: #212121;
+  text-align: center;
 }
 .benefits__text {
   line-height: 1.71;
@@ -997,80 +1032,54 @@ body {
 }
 
 /* Portfolio */
-@media screen and (min-width: 768px) {
-  .portfolio-project__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: -15px;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-}
-@media screen and (min-width: 768px) and (min-width: 480px) {
-  .portfolio-project__list {
-    width: 450px;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 767px) {
-  .portfolio-project__list:not(:last-child) {
-    margin-bottom: 30px;
-  }
-}
-@media screen and (min-width: 768px) and (min-width: 768px) {
-  .portfolio-project__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 15px;
-    width: calc((100% - 60px) / 2);
-  }
-}
-@media screen and (min-width: 768px) and (min-width: 1200px) {
-  .portfolio-project__list {
-    width: calc((100% - 90px) / 3);
-  }
-}
-@media screen and (min-width: 480px) {
-  .portfolio-project__list__li {
-    width: 450px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .portfolio-project__list__li:not(:last-child) {
-    margin-bottom: 30px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .portfolio-project__list__li {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 15px;
-    width: calc((100% - 60px) / 2);
-  }
-}
-@media screen and (min-width: 1200px) {
-  .portfolio-project__list__li {
-    width: calc((100% - 90px) / 3);
-  }
-}
-.portfolio-project__list__button-list {
+.portfolio-project__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
+}
+@media screen and (min-width: 768px) {
+  .portfolio-project__li {
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-project__li {
+    -ms-flex-preferred-size: calc((100% - 60px) / 3);
+        flex-basis: calc((100% - 60px) / 3);
+  }
+}
+.portfolio-project__button-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 50px;
+  margin-bottom: 25px;
 }
-.portfolio-project__list__button-li + .portfolio-project__list__button-li {
+@media screen and (min-width: 768px) {
+  .portfolio-project__button-list {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-project__button-list {
+    margin-bottom: 50px;
+  }
+}
+.portfolio-project__button-li + .portfolio-project__button-li {
   margin-left: 8px;
 }
-.portfolio-project__list__button {
+.portfolio-project__button {
   padding: 6px 22px;
   font-family: inherit;
   font-weight: 500;
@@ -1087,14 +1096,19 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-project__list__button:hover, .portfolio-project__list__button:focus {
+@media screen and (max-width: 767px) {
+  .portfolio-project__button {
+    margin-bottom: 15px;
+  }
+}
+.portfolio-project__button:hover, .portfolio-project__button:focus {
   color: #ffffff;
   background-color: #2196f3;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
-.portfolio-project__list__button.active {
+.portfolio-project__button.active {
   color: #ffffff;
   background: #2196f3;
 }
@@ -1103,7 +1117,6 @@ body {
   display: block;
   text-decoration: none;
   border: 1px solid #eeeeee;
-  width: 370px;
   background: #ffffff;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
