--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -91,15 +91,106 @@
 //   }
 
 // }
+@media screen and (max-width: $pretablet ) {
+  
 
 .menu-container{
+  
   background-color: $wite-color;
 
-  @media screen and (max-width: $pretable) {
+  
    
-    position: absolute;
+position: absolute;
 top:0;
 left: 0;
 width: 100%;
+height: 796px;
+padding: 48px 40px;
+  
+}
+.menu-toggle-close{
+
+
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  border: none;
+  background-color: $wite-color;
+  cursor: pointer;
+    transition: fill $time $time-function;
+
+    &:hover,
+      &:focus {
+        fill: $accent-color;
+
+  @media screen and (min-width: $tablet) {
+      display: none;
+    }
+}}
+
+.header__link{
+font-size: 40px;
+line-height: 47px;
+text-align: center;
+letter-spacing: 0.02em;
+
+color: #212121;
+text-decoration: none;
+
+}
+
+.header__nav-link{
+  margin-bottom: 287px;
+}
+.link +.link {
+margin-top: 32px;
+}
+.header__tel{
+font-size: 34px;
+line-height: 1.18;
+/* identical to box height */
+
+letter-spacing: 0.02em;
+
+color: #2196F3;
+text-decoration: none;
+}
+.header__mail{
+  font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+  
+    color: #757575;
+    text-decoration: none;
+}
+.header__social-link
+{
+  font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+  
+    color: #2196F3;
+    text-decoration: none;
+
+}
+.header__social-item +.header__social-item{
+margin-left: 10px;
+
+.header__social-link::before{
+  content:'';
+  border: 1px solid rgba(33, 33, 33, 0.2);
+    transform: rotate(90deg);
+    width: 22px;
+    margin-right: 10px;
+}
+}
+.header__social-list{
+  display: flex;
+  margin-top: 64px;
+}
+.header__contacts-link-icon{
+  @media screen and (max-width: $pretablet){
+    display: none;
   }
+}
 }
